--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,7 @@ body {
   font-size: 1rem;
   padding: 50px;
   style:"text-align:center";
-  background-color: #FFF8F3;
+  background-color: #FFFFFF;
   margin:15%;
   margin-right: 15%;
 }
