--- a/css/styles.css
+++ b/css/styles.css
@@ -25,8 +25,9 @@ body {
   font-size: 1rem;
   padding: 50px;
   style:"text-align:center";
-  background-color: #FFFFFF;
-  margin:15%;
+  background: rgb(215,235,255);
+  background: linear-gradient(180deg, rgba(215,235,255,1) 0%, rgba(191,236,255,1) 62%, rgba(241,215,255,1) 100%);
+    margin:15%;
   margin-right: 15%;
 }
 
